# P351406

./: CMakeLists.txt
P351406/: CMakeLists.txt  run_cmake.sh
P351406/include/: developer.hpp  junior_developer.hpp  senior_developer.hpp
P351406/logos/: junior_logo.txt  logo2.txt  senior_logo.txt
P351406/src/: CMakeLists.txt  developer.cpp  junior_developer.cpp  main.cpp  senior_developer.cpp
P351406/test/: CMakeLists.txt  developer_test.cpp  test_main.cpp
code/include/: developer.hpp
